tree-sitter-counterpoint/test/corpus/index.txt

===========
KEYWORDTYPE
===========


		f.<void>();
		f.<bool>();
		f.<int>();
		f.<float>();
		f.<str>();
		f.<obj>();
	

---


		(source_file
			
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
			
		(function_call
			
		(generic_arguments
			
		(type
			
		(type_union
			
		(type_intersection
			
		(type_unary_keyword
			
		(type_unary_symbol
			
		(type_compound
			
		(type_unit
			
		(keyword_type
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
			
		(function_arguments
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
	
============
KEYWORDVALUE
============


		null;
		false;
		true;
	

---


		(source_file
			
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(keyword_value
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(keyword_value
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(keyword_value
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
	
==========
IDENTIFIER
==========


		my_variable;
	

---


		(source_file
			
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(identifier
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
	
=======
INTEGER
=======


		42;
		\b01000101;
		4_2;
		\b0100_0101;
	

---


		(source_file
			
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(integer
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(integer__radix
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(integer__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(integer__radix__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
	
=====
FLOAT
=====


		42.;
		42.69;
		42.69e15;
		42.69e+15;
		42.69e-15;
		4_2.;
		4_2.6_9;
		4_2.6_9e1_5;
		4_2.6_9e+1_5;
		4_2.6_9e-1_5;
	

---


		(source_file
			
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		(statement
			
		(expression
			
		(expression_disjunctive
			
		(expression_conjunctive
			
		(expression_equality
			
		(expression_comparative
			
		(expression_additive
			
		(expression_multiplicative
			
		(expression_exponential
			
		(expression_unary_symbol
			
		(expression_compound
			
		(expression_unit
			
		(primitive_literal
			
		(float__separator
			
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
		)
	
	
======
STRING
======


		'hello world';

		'hello world %ignore';

		'hello %ignore
		world';

		'hello world %%ignore
		ignore';

		'hello %%ignore
		ignore%% world';

		'hello\u{0020}world';

		'hello\u{00_20}world';
	

---

